--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,8 +1,11 @@
 es:
   label_login_with_saml: Acceder usando Shibboleth
   label_login_page_text: Login page text
+  label_logout_url: Logout URL
   label_saml_enabled: Habilitar autenticación Shibboleth
   label_replace_redmine_login: Reemplazar el login de Redmine
   text_full_logout_proposal: Tal vez quiera %{value} antes de intentar con otro usuario
   text_logout_from_saml: cerrar su sesión SSO
   label_onthefly_creation: Crear usuarios automáticamente?
+  label_sync_groups: Sync groups from LDAP?
+  label_create_groups: Create groups automatically?
