--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -7,5 +7,5 @@ en:
   text_full_logout_proposal: You may want to %{value} before trying an other username.
   text_logout_from_saml: close SSO session
   label_onthefly_creation: Create users automatically?
-  label_sync_groups: Sync groups from LDAP?
+  label_sync_groups: Sync groups from Shibboleth?
   label_create_groups: Create groups automatically?
