--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -7,5 +7,5 @@ es:
   text_full_logout_proposal: Tal vez quiera %{value} antes de intentar con otro usuario
   text_logout_from_saml: cerrar su sesión SSO
   label_onthefly_creation: Crear usuarios automáticamente?
-  label_sync_groups: Sync groups from LDAP?
+  label_sync_groups: Sync groups from Shibboleth?
   label_create_groups: Create groups automatically?
