--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,5 +7,7 @@ en:
   text_full_logout_proposal: You may want to %{value} before trying an other username.
   text_logout_from_saml: close SSO session
   label_onthefly_creation: Create users automatically?
-  label_sync_groups: Sync groups from Shibboleth?
+  label_update_users_attributes: Update users attributes automatically?
+  label_sync_groups: Sync groups from LDAP?
   label_create_groups: Create groups automatically?
+  label_delete_user_from_groups: Delete users in groups automatically?
